fixed right gap bug

--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,10 @@
 *
 * ======================================================= */
 
+html {
+  overflow: scroll;
+}
+
 body {
   font-family: 'Cabin', sans-serif;
   line-height: 1.6;
